--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -595,7 +595,8 @@ ui-appPage-commonStyle">
             W.showHint('success', '已经将链接复制到剪贴板');
         });
         var flag = true;
-        var add_keyword_btn,
+        var add_keyword_div,
+            add_keyword_btn,
             prize_keyword_view;
         W.Broadcaster.on('selectwidget:assert', function(cid){
             //初始化弹出层
@@ -603,13 +604,19 @@ ui-appPage-commonStyle">
                 $('[data-toggle="popover"]').popover();
 
                 //自动回复 xxxxx
-                add_keyword_btn = $('.xui-propertyView-app-ReplyGroup .propertyGroup_property_horizontalField .propertyGroup_property_input');
+                add_keyword_div = $('.xui-propertyView-app-ReplyGroup .propertyGroup_property_horizontalField .propertyGroup_property_input');
+                add_keyword_btn = $('.xui-propertyView-app-ReplyGroup .propertyGroup_property_horizontalField .propertyGroup_property_input span');
+                add_keyword_div.attr('id','add_keyword_div');
+                add_keyword_btn.attr('id','add_keyword_btn');
+
                 var xx = add_keyword_btn.position().top+50;
 			    var yy = add_keyword_btn.position().left;
                 var offset={top:xx,left:yy};
                 add_keyword_btn.click(function(){
                     prize_keyword_view || (prize_keyword_view = new W.view.apps.PrizeKeyword({
                         el:'.xa-keywordBoxDiv',
+                        keyword_div:add_keyword_div,
+
                      }));
                     prize_keyword_view.setPos(offset);
                     prize_keyword_view.render();
