--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -16,7 +16,6 @@
 		</div>
 		<span class="xui-systemName"></span>
 		<div class="xui-headerActionBar">
-<<<<<<< HEAD
 			{% if request.user.is_manager %}
 				{% if request.user.username == 'malla' or request.user.username == 'ceshi01' or request.user.username == 'jobs' %}
 					<a href="http://fans.weapp.weizzz.com/auth/account_help/" target="_blank"><i class="xui-toolIcon"></i>权限管理</a>
@@ -317,20 +316,22 @@
         //获取message_count
         if(localStorage.getItem('message_count') ==null){
             $.ajax({
-            url:'{{fans_host}}/count/message_count/',
-            type:'post',
-            dataType:'jsonp',
-            success:function(response) {
-                if (response.code == 200) {
-                    localStorage.message_count=response.data.message_count;
-                    $("#message_count").html(localStorage.message_count)
-                }else{
-                    xlog("获取message_count失败")
+                url:'{{fans_host}}/count/message_count/',
+                type:'post',
+                dataType:'jsonp',
+                success:function(response) {
+                    if (response.code == 200) {
+                        localStorage.message_count=response.data.message_count;
+                        $("#message_count").html(localStorage.message_count);
+                        $("#message_count").css('display','inline');
+                    }else{
+                        xlog("获取message_count失败");
+                    }
                 }
-            }
-        });
+            });
         }else{
-            $("#message_count").html(localStorage.message_count)
+            $("#message_count").html(localStorage.message_count);
+            $("#message_count").css('display','inline');
         }
 
 		function initSubmit(){
