--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -143,6 +143,13 @@
         .xui-propertyView-app-ShareGroup Button.xui-removeImageButton{
             display: none;
         }
+        .xui-propertyView-app-ReplyGroup .propertyGroup_property_horizontalField{
+            margin-top: 10px;
+        }
+        .xui-propertyView-app-ReplyGroup .propertyGroup_property_horizontalField .propertyGroup_property_input{
+            width:360px;
+            padding-bottom: 10px;
+        }
         .xui-propertyView-app-ReplyGroup .propertyGroup_property_horizontalField .propertyGroup_property_input span{
             color:#0D5F87 !important;
         }
@@ -204,8 +211,31 @@
         #add_keyword_div .xui-close{
             height: 16px;
             position: relative;
-            right: 1px;
-            top: -9px;
+            right: -9px;
+            top: -21px;
+        }
+        .xui-patterns{
+            position: relative;
+            top:-13px;
+            border: 1px solid #DDDDDD;
+            background-color: #FFFFFF;
+            text-align: center;
+            /* padding-left: 13px; */
+            padding: 13px 2px 2px 15px;
+            line-height: 10px;
+            margin-right: 10px;
+            margin-bottom: 5px;
+        }
+        #add_keyword_btn{
+            position: relative;
+            top:-13px;
+            text-align: center;
+            /* padding-left: 13px; */
+            padding: 13px 2px 2px 15px;
+            line-height: 10px;
+            margin-right: 10px;
+            margin-bottom: 5px;
+            display: inline-block;
         }
 
     </style>
@@ -615,22 +645,20 @@ ui-appPage-commonStyle">
                 add_keyword_div.attr('id','add_keyword_div');
                 add_keyword_btn.attr('id','add_keyword_btn');
 
-
-                var xx = add_keyword_btn.position().top+50;
+                //显示框并且动态定位
 			    var yy = add_keyword_btn.position().left;
-                var offset={top:xx,left:yy};
                 add_keyword_btn.click(function(){
+
                     prize_keyword_view || (prize_keyword_view = new W.view.apps.PrizeKeyword({
                         el:'.xa-keywordBoxDiv',
                         keyword_div:add_keyword_div
 
                      }));
+                    var xx = add_keyword_btn.position().top+50;
+                    var offset={top:xx,left:yy};
                     prize_keyword_view.setPos(offset);
                     prize_keyword_view.render();
-{#                    $('.xa-data-patterns .xa-mode .xa-close').bind('click',function(){#}
-{#                        console.log('HHHHHHHHHHH');#}
-{#                    $(this).parent().find('.xa-data-patterns').remove();#}
-{#                    });#}
+
                 });
 
                 flag = false;
