--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -237,6 +237,12 @@
             margin-bottom: 5px;
             display: inline-block;
         }
+    .xui-i-type span{
+        border-left:1px solid ;
+        padding-left: 2px;
+        margin-left: 3px;
+    }
+
 
     </style>
 {% endblock %}
