--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -501,6 +501,8 @@ ui-appPage-commonStyle">
                 d[key_tmp] = mo_tmp;
                 reply_keyword.push(d);
             });
+                    console.log(">>>>>>>>>>>>>> keyword <<<<<<<<<<<<？？？？？？？");
+                    console.log(reply_keyword);
             var reply_content = descriptionModel.get('reply_content');
             var reply ={"keyword":reply_keyword,"content":reply_content};
 
