--- a/weapp/static_v2/js/view/apps_prize_keyword/template.html
+++ b/weapp/static_v2/js/view/apps_prize_keyword/template.html
@@ -22,13 +22,13 @@
 </script>
 
 <script id="apps-addkey-view-tmpl-src" type="text/x-handlebars-template">
-    <div id="keyword-{{ id }}" class="xui-patterns xa-data-patterns fl mt10 ">
+    <div  class="xui-patterns xa-data-patterns fl mt10 ">
         <div class="xui-i-key fl ">
             <span class="data-keyword" data-keyword="{{ keyword }}"> {{ keyword }}</span>
         </div>
         <div class="xui-i-type fl  xa-mode">
             <span class="xa-data-type" data-type="{{ type }}">{{mode}}</span>
-            <img id="close-btn-{{ id }}" class="fr xui-close xa-close" src="/static_v2/img/editor/icon_delete.png" />
+            <img  class="fr xui-close xa-close" src="/static_v2/img/editor/icon_delete.png" />
         </div>
     </div>
 </script>
