--- a/weapp/market_tools/tools/share_red_envelope/templates/shareRedEnvelope/webapp/share_red_envelope.html
+++ b/weapp/market_tools/tools/share_red_envelope/templates/shareRedEnvelope/webapp/share_red_envelope.html
@@ -24,9 +24,12 @@
               <!-- 会员领取后显示 -->
               <div class="xui-btnGroup">
               <!-- 单品券应跳到对应商品详情 -->
-                  <a href="/termite/workbench/jqm/preview/?module=user_center&model=user_info&action=get&workspace_id=mall&webapp_owner_id={{request.webapp_owner_id}}" class="xui-myCoupon-btn">我的优惠券</a>{% if coupon_rule.limit_product %}<a href="/termite/workbench/jqm/preview/?woid={{request.webapp_owner_id}}&module=mall&model=product&rid={{coupon_rule.limit_product_id}}" class="xui-use-btn">立即使用
-                  </a>{%else%}<a href="/termite/workbench/jqm/preview/?woid={{request.webapp_owner_id}}&module=mall&model=products&action=list" class="xui-use-btn">立即使用
-                  </a>{% endif %}
+                  <a href="/termite/workbench/jqm/preview/?module=market_tool:coupon&model=usage&action=get&workspace_id=market_tool:coupon&webapp_owner_id={{request.webapp_owner_id}}&project_id=0" class="xui-myCoupon-btn">我的优惠券</a>
+                  {% if coupon_rule.limit_product %}
+                      <a href="/termite/workbench/jqm/preview/?woid={{request.webapp_owner_id}}&module=mall&model=product&rid={{coupon_rule.limit_product_id}}" class="xui-use-btn">立即使用</a>
+                  {%else%}
+                      <a href="/termite/workbench/jqm/preview/?woid={{request.webapp_owner_id}}&module=mall&model=products&action=list" class="xui-use-btn">立即使用</a>
+                  {% endif %}
               </div>
           {% else %}
               <!-- 非会员领取后显示 -->
