--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -21,7 +21,7 @@
       }
        var hm = document.createElement("script");
        hm.src = "/weixin/js/config/?path="+encodeURIComponent(location.href);
-       var s = document.getElementsByTagName("script")[0]; 
+       var s = document.getElementsByTagName("script")[0];
        s.parentNode.insertBefore(hm, s);
       /*
        * 微信分享按钮事件
@@ -70,6 +70,8 @@
       };
 
       if (window.location.href.indexOf('share_red_envelope') > 0){
+          alert(W.sharePageDesc, W.sharePageTitle);
+          alert("test???");
           W.wxShareTimelineData = {
               "imgUrl" : W.sharePageImg,
               "link" : window.location.href,
@@ -91,7 +93,7 @@
                           module: 'user_center',
                           target_api: 'shared_url/record',
                           link: window.location.href,
-                          title:W.sharePageTitle
+                          title: W.sharePageTitle
                       }),
                       success: function(data) {
                           alert("分享链接成功")
