添加页面测试alert

--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -4,7 +4,13 @@
 
       W.currentPageName = "{{current_page_name}}";
 
-      W.sharePageTitle = {% if share_page_title %}"{{ share_page_title }}"{% else %}"{{ page_title }}"{% endif %};
+      W.sharePageTitle =  {% if share_page_title %}
+                              "{{ share_page_title }}"
+                              alert({{ share_page_title }});
+                              alert("{{(+++)}}");
+                          {% else %}
+                              "{{ page_title }}"
+                          {% endif %};
       W.sharePageDesc = {% if share_page_desc %}"{{ share_page_desc }}"{% else %}"{{ page_title }}"{% endif %};
       W.sharePageImg = {% if share_img_url %}"{{ share_img_url }}"{% else %}"{{ request.share_img_url }}"{% endif %};
 
@@ -70,8 +76,9 @@
       };
 
       if (window.location.href.indexOf('share_red_envelope') > 0){
-          alert(W.sharePageDesc, W.sharePageTitle);
+          alert(W.sharePageDesc);
           alert("test???");
+          alert("W.sharePageTitle");
           W.wxShareTimelineData = {
               "imgUrl" : W.sharePageImg,
               "link" : window.location.href,
