万万没想到 打印日志都能出错

--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -7,7 +7,7 @@
       W.sharePageTitle =  {% if share_page_title %}
                               "{{ share_page_title }}"
                               alert({{ share_page_title }});
-                              alert("{{(+++)}}");
+                              alert("+++");
                           {% else %}
                               "{{ page_title }}"
                           {% endif %};
