--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -354,7 +354,7 @@
                   str_coupon = " “"+day_coupon+"”一张";
               }
               if(day_integral <= 0 && !day_coupon){
-                  rule_html += "<li>1、每日签到，没有奖励</li>";
+                  rule_html += "<li>1.每日签到，没有奖励</li>";
               }else{
                   rule_html += "<li>"+str_int+str_coupon+"。</li>";
               }
