--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -198,7 +198,7 @@
 						<div class="propertyGroup_property_label">${field.displayName}</div>
 						{{/if}}
 						<div class="propertyGroup_property_input pl5" style="width: 90%; margin: 5px auto;">
-							<textarea class="" style="height: 100px; width: 95%;" data-field="${field.name}" {{if field.maxLength}}maxlength="${field.maxLength}"{{/if}}>${model.get(field.name)}</textarea>
+							<textarea class="" {{if field.placeholder}}placeholder="${field.placeholder}"{{/if}} style="height: 100px; width: 95%;" data-field="${field.name}" {{if field.maxLength}}maxlength="${field.maxLength}"{{/if}}>${model.get(field.name)}</textarea>
 							{{if field.help}}
 							<div style="color: #888;">
 								{{html field.help.replace(/\n/g, "<br/>")}}
