--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -69,7 +69,11 @@
           }
       };
 
+      alert(W.sharePageTitle);
+      alert(W.sharePageDesc);
       if (window.location.href.indexOf('share_red_envelope') > 0){
+          alert("FFFFFFFFFFFFFFFFFFFFFFF");
+          alert("W.sharePageDesc");
           W.wxShareTimelineData = {
               "imgUrl" : W.sharePageImg,
               "link" : window.location.href,
