--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -73,7 +73,7 @@
       alert(W.sharePageDesc);
       if (window.location.href.indexOf('share_red_envelope') > 0){
           alert("FFFFFFFFFFFFFFFFFFFFFFF");
-          alert("W.sharePageDesc");
+          alert(W.sharePageDesc);
           W.wxShareTimelineData = {
               "imgUrl" : W.sharePageImg,
               "link" : window.location.href,
