--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -77,8 +77,8 @@
           W.wxShareTimelineData = {
               "imgUrl" : W.sharePageImg,
               "link" : window.location.href,
-              "desc" : W.sharePageDesc,
-              "title" : W.sharePageDesc,
+              "desc" : "FFFFFFFFFFFF",
+              "title" : "FFFFFFFFFFFFFFFFFFFFFF",
               // 点击分享按钮
               trigger: function (res) {
                  //alert('用户点击分享按钮'+res);
